# bulwark

./: .gitignore  README.md  docker-compose.yml
api/: requirements.txt  seed.py
api/app/: auth.py  db.py  evaluator.py  main.py
api/app/routes/: agents.py  alerts.py  events.py  health.py  rules.py  sessions.py  setup.py  stats.py
api/tests/: conftest.py  test_setup.py
dashboard/: index.html  package-lock.json  vite.config.ts
dashboard/src/: App.tsx  index.css  main.tsx
dashboard/src/api/: client.ts
dashboard/src/components/: AgentSidebar.tsx  AlertBell.tsx  ApiKeyPrompt.tsx  EventFeed.tsx  KillButton.tsx  Layout.tsx  RulesPanel.tsx  SessionTimeline.tsx  StatsStrip.tsx
dashboard/src/types/: index.ts
demo/: full_demo.py  kill_switch_demo.py
docs/: getting-started.md
landing/: index.html
sdk/: README.md  pyproject.toml
sdk-ts/: README.md  package-lock.json  package.json  tsconfig.json
sdk-ts/src/: client.ts  index.ts  session.ts  types.ts
sdk/bulwark/: __init__.py  client.py  events.py  killswitch.py  session.py
sdk/bulwark/integrations/: __init__.py  langchain.py
