[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "bulwark-ai"
version = "0.1.0"
description = "Real-time monitoring, alerting, and emergency kill switch for AI agents."
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
authors = [
    { name = "Bulwark", email = "eng@bulwark.live" },
]
keywords = ["ai", "agents", "safety", "monitoring", "kill-switch", "observability"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: System :: Monitoring",
    "Typing :: Typed",
]
dependencies = [
    "httpx>=0.27",
]

[project.optional-dependencies]
langchain = ["langchain-core>=0.3"]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "respx>=0.21",
]

[tool.hatch.build.targets.wheel]
packages = ["bulwark"]

[project.urls]
Homepage = "https://bulwark.live"
Documentation = "https://docs.bulwark.live"
Repository = "https://github.com/bulwark-live/bulwark"
Issues = "https://github.com/bulwark-live/bulwark/issues"
